(Merging nsbeta2 checkin to the tip) Fixing nsbeta2+ bug 28572, the docshell was fireing the script unload handler too early in some cases and in some other cases the unload handler was fired even if the document wasn't unloaded. r=nisheeth, a=nisheeth.